# RNMP-text2cypher

./: .env.sample  .flake8  .gitignore  Dockerfile  README-f1-cypher-branch.txt  README.md  Relationship_Guide.md  constants.py  docker-compose.yaml  docker-entrypoint-f1.sh  f1-database-loader.sh  import-data.sh  pyproject.toml  report.py
docs/: database-verification.md  project_structure_filtered.txt
import/: circuits_nodes.csv  constructor_results_nodes.csv  constructor_standings_nodes.csv  constructors_nodes.csv  drivers_nodes.csv  qualifying_nodes.csv  races_nodes.csv  results_nodes.csv  standings_nodes.csv
neo4j/: Dockerfile  docker-compose.yaml
neo4j/guides/: index.html
neo4j/scripts/: import-nodes.sh  import-relationships.sh  startup-queries.cypher  startup.sh  welcome-queries.cypher
neo4j/scripts/constraints/: create-constraints-rel-f1.cypher  create-constraints-rel-stack.cypher  create-constraints-rel-trial.cypher
neo4j/scripts/relationships/: import-relationships-rel-f1.sh  import-relationships-rel-stack.sh  (+1 more)
scripts/: f1-database-loader.sh
src/: constants.py  main.py  models.py  old_main.py  utils.py  validate_tasks.py
src/database/: constants.py  duckdb.py  duckdb_utils.py  get_node_csvs.py  neo4j.py  save_to_sqlite.py  setup.py  sqlite.py
src/evaluation/: complete_plot.py  eval.py  llm.py  local_eval.py  plot.py  re_evaluation.py  remote_eval.py  remote_eval_utils.py  scoring.py  utils.py
src/sql/: eval.py  scoring.py
src/tasks/: easy.json  f1_easy.json  f1_hard.json  f1_intermediate.json  hard.json  intermediate.json
(+18 files in other folders)
