[project]
name = "text2cypher"
version = "0.1.0"
description = "A comparison of text2cypher and text2sql models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "neo4j>=5.28.2",
    "relbench>=1.1.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
]
