[project]
name = "text2cypher"
version = "0.1.0"
description = "A comparison of text2cypher and text2sql models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "duckdb>=1.3.2",
    "neo4j>=5.28.2",
    "openai>=1.107.1",
    "relbench>=1.1.0",
    "sqlparse>=0.5.3",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "bitsandbytes>=0.47.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "typer==0.19.2",
    "python-dotenv>=1.1.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
]
